[package]
name = "fearless-concurrency-solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
