[package]
name = "fearless-concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hex = "0.4.3"
mysql_async = "0.34.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
